--- a/composer.json
+++ b/composer.json
@@ -12,23 +12,23 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">= 7.4",
-        "ramsey/uuid": "^3.8 || ^4",
-        "symfony/filesystem": "^5.0 || ^6.0",
-        "symfony/finder": "^5.0 || ^6.0",
-        "symfony/http-foundation": "^5.0 || ^6.0"
+        "php": ">=8.0",
+        "ramsey/uuid": "^4",
+        "symfony/filesystem": "^5.4|^6.0",
+        "symfony/finder": "^5.4|^6.0",
+        "symfony/http-foundation": "^5.4|^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
-        "makinacorpus/goat-query": "^2.1.1 || ^3.0.0",
-        "symfony/config": "^5.0 || ^6.0",
-        "symfony/console": "^5.0 || ^6.0",
-        "symfony/dependency-injection": "^5.0 || ^6.0",
-        "symfony/framework-bundle": "^5.0 || ^6.0",
-        "symfony/http-kernel": "^5.0 || ^6.0",
-        "symfony/mime": "^5.0 || ^6.0",
-        "symfony/yaml": "^5.0 || ^6.0",
+        "makinacorpus/goat-query": "^2.1.1",
         "phpunit/phpunit": "^9.2",
+        "symfony/config": "^5.4|^6.0",
+        "symfony/console": "^5.4|^6.0",
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/framework-bundle": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/mime": "^5.4|^6.0",
+        "symfony/yaml": "^5.4|^6.0",
         "twig/twig": "^3.1"
     },
     "conflict": {
